custdetail_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-detail-v1
  labels:
    app: customerdetailapp
    version: v2.4
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
       app: customerdetailapp
       version: v2.4
  template:
    metadata:
      name: customerdetailapp
      labels:
        app: customerdetailapp
        version: v2.4
    spec: 
      containers:
        - name: customerdetailapp
          image: gcr.io/gcdeveloper/anthos-customer-detail:v2.4
          ports:
            - containerPort: 9000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: customer-detail
  labels:
     app: customerdetailapp
     service: customer-detail
spec:
  selector:
    app: customerdetailapp
  ports:
    - name: http
      port: 9000
