mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: anthos-mysql
  labels:
    app: anthos-db
    service: anthos-mysql
spec:
  ports:
    - port: 3306
      name: tcp-mysql
      protocol: TCP
      targetPort: 3306
  selector:
    app: anthos-db
---
apiVersion: apps/v1 # for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: anthos-mysql-v1
  labels:
    app: anthos-db
    version: v5.6
spec:
  selector:
    matchLabels:
      app: anthos-db
      version: v5.6
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: anthos-db
        version: v5.6
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
          name: tcp-mysql
          protocol: TCP
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
