orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-v1
  labels:
    app: ordersapp
    version: o0.7
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
       app: ordersapp
       version: o0.7
  template:
    metadata:
      name: ordersapp
      labels:
        app: ordersapp
        version: o0.7
    spec: 
      containers:
        - name: ordersapp
          image: gcr.io/gcdeveloper/anthos-orders:o0.7
          ports:
            - containerPort: 9000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
     app: ordersapp
     service: orders
spec:
  selector:
    app: ordersapp
  ports:
    - name: http
      port: 9000
