gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: appmain
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /components
    - uri:
        prefix: /loadCustomerDetails
    - uri:
        prefix: /loadCustomerOrders
    route:
    - destination:
        host: frontend
        port:
          number: 9000
  - match:
    - uri:
        exact: /main
    rewrite:
      uri: /
    route:
    - destination:
        host: frontend
        port:
          number: 9000
  - match:
    - uri:
        prefix: /loadCustomers
    route:
    - destination:
        host: frontend
        port:
          number: 9000
    fault:
      delay:
        percentage:
          value: 5
        fixedDelay: 7s
