https-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "istio.wiprogcn.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: appmain-https
spec:
  hosts:
  - "*"
  gateways:
  - https-gateway
  http:
  - match:
    - uri:
        prefix: /components
    - uri:
        prefix: /loadCustomerDetails
    - uri:
        prefix: /loadCustomerOrders
    route:
    - destination:
        host: frontend
        port:
          number: 9000
  - match:
    - uri:
        exact: /main
    rewrite:
      uri: /
    route:
    - destination:
        host: frontend
        port:
          number: 9000
  - match:
    - uri:
        prefix: /loadCustomers
    route:
    - destination:
        host: frontend
        port:
          number: 9000
    fault:
      delay:
        percentage:
          value: 5
        fixedDelay: 7s
