virtualserv-dashboards.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
spec:
  hosts:
  - "istio.wiprogcn.com"
  gateways:
  - http-gateway
  http:
    - match:
      - uri:
          prefix: /grafana
      rewrite:
        uri: /
      route:
      - destination:
          port:
            number: 20001
          host: grafana.istio-system
