vs-cust.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-vs
spec:
  hosts:
  - "customer"
  http:
    - route:
      - destination:
          port:
            number: 9000
          host: customer
      match:
      - uri:
          prefix: /getCustomers
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer
  namespace: default
spec:
  host: customer
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
