vs-custdetail.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customerdetail-vs
spec:
  hosts:
  - "customer-detail"
  http:
    - match:
      - uri:
          prefix: /v1/
      rewrite:
        uri: /
      route:
      - destination:
          port:
            number: 9000
          host: customer-detail
          subset: oldversion
    - route:
      - destination:
          port:
            number: 9000
          host: customer-detail
          subset: newversion
        weight: 50
      - destination:
          port:
            number: 9000
          host: customer-detail
          subset: oldversion
        weight: 50
      match:
      - uri:
          prefix: /getCustomerDetails
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer-detail
spec:
  host: customer-detail
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: oldversion
    labels:
      version: v2.4
  - name: newversion
    labels:
      version: v2.5
