vs-mysql.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-vs
spec:
  hosts:
  - "anthos-mysql"
  http:
    - route:
      - destination:
          port:
            number: 3306
          host: anthos-mysql
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "mysql"
spec:
  host: anthos-mysql
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
