vs-orders.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders-vs
spec:
  hosts:
  - "orders"
  http:
    - route:
      - destination:
          port:
            number: 9000
          host: orders
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "orders"
spec:
  host: "orders"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
